# Webserver

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/bestellsystem/: __init__.py  app.py  config.py  db.py  models.py
backend/bestellsystem/migrations/: env.py
backend/bestellsystem/migrations/versions/: 6b801cb9880c_initial_migration_create_user_table.py
backend/bestellsystem/utils/: __init__.py  errors.py  logging.py
backend/tests/: test_app.py  test_config.py  test_db.py  test_errors.py  test_logging.py
deploy/: env.example
